<resources>
    <string name="app_name">Drug Verify</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="splash_text">Drug Verify v0.1</string>


    <string name="verify_drug_title">Drug Verify</string>

    <string name="about_app_title">About</string>
    <string name="drug_code_input_hint">ENTER DRUG CODE</string>
    <string name="drug_batchno_input_hint">Batch No (Optional)</string>
    <string name="verify_button_text">Verify</string>


    <string name="menu_verify_drug">Verify drug</string>
    <string name="menu_about_app">About</string>
    <string name="menu_exit">Exit</string>


    <string name="manufacturer">Manufacturer:</string>

    <string name="manufactured_date">Manufactured:</string>

    <string name="expired_date">Expiresd:</string>

    <string name="batch_no">Batch No:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>
