<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ad3bay0.drugverify.fragment.VerifyDrugFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="156dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text=""
                android:ems="10"
                android:id="@+id/drugCode"
                android:layout_weight="1"
                android:hint="@string/drug_code_input_hint"
                />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text=""
                android:ems="10"
                android:id="@+id/batchNoTxt"
                android:layout_weight="1"
                android:hint="@string/drug_batchno_input_hint"
                />


        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/verifyBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_button_text"
            style="@style/CustomButton" />


    </LinearLayout>


</FrameLayout>
