<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_drug_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/details_top_padding"
    android:orientation="vertical"
    tools:context="com.ad3bay0.drugverify.activities.DrugInfoActivity"
    android:background="@color/colorBackground">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginRight="10dp"
        android:id="@+id/drugImg"
        android:contentDescription="Drug Image"
        app:srcCompat="@mipmap/ic_launcher"

        />

    <LinearLayout
        android:id="@+id/infosection"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/drugImg">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:id="@+id/drugName"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"
            android:id="@+id/drugDescription"
            android:textColor="@android:color/background_dark" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_below="@id/infosection"
        android:id="@+id/relativeLayout">

        <TextView
            android:text="@string/manufacturer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/drugManufacturer"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:text="@string/batch_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/drugManufacturer"
            android:id="@+id/batchNo"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:text="@string/manufactured_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/batchNo"
            android:layout_marginRight="15dp"
            android:id="@+id/manuDate"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:text="@string/expired_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:id="@+id/expiredDate"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/background_dark"
            android:layout_below="@+id/manuDate" />
        s
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/verificationStatus"
        android:textSize="36sp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center" />

</RelativeLayout>
